<resources>
    <string name="app_name">Diet</string>
    <string name="userProfileEntryButtonLabel">User Profile</string>
    <string name="userLifeStyleEntryButtonLabel">User LifeStyle</string>
    <string name="userLifeStyleInputEntryButtonLabel">Life Style Input</string>
    <string name="userProfileLogoLabel">Logo</string>
    <string name="userProfileNameLabel">Name</string>
    <string name="userProfileHeightLabel">Height</string>
    <string name="userProfileAgeLabel">Age</string>
    <string name="userProfileCompleteButtonLabel">Complete</string>
    <string name="userWeightWeightLabel">Weight</string>
    <string name="userWeightPercentageBodyFatLabel">Percentage\nBody Fat</string>
    <string name="userWeightAmountOfMuscleLabel">Amount Of\nMuscle</string>
    <string name="userWeightUnitHint">Kg</string>
    <string name="userWeightPercentHint">%</string>
    <string name="userLifeStyleInputExitButtonLabel">X</string>
    <string name="userLifeStyleInputAddButtonLabel">Add Life Style</string>
    <string name="userLifeStyleInputSaveButtonLabel">Save</string>
    <string name="userLifeStyleInputNameTextLabel">Name</string>
    <string name="userLifeStyleInputNameHint">Name</string>
    <string name="userLifeStyleInputCalorieTextLabel">Calorie per hours</string>
    <string name="userLifeStyleInputCalorieHint">kcal/h</string>
    <string name="userLifeStyleInputTimeTextLabel">Time(Hour)</string>
    <string name="userLifeStyleInputTimeHint">hour</string>
    <string name="userLifeStyleInputTotalCalorieTextLabel">Total Calorie</string>
    <string name="userLifeStyleInputTotalCalorieValue"> </string>
    <string name="userLifeStyleInputTotalCalorieUnit">kcal</string>
    <string name="userLifeStyleActivityMetabolismLabel">Activity\nMetabolism</string>
    <string name="userLifeStyleBasalMetabolismLabel">Basal\nMetabolism</string>
    <string name="userLifeStyleKiloCalorieLabel">kcal</string>
    <string name="userMealCalorieNeededLabel">Calorie Needed</string>
    <string name="userMealKiloCalorieLabel">kcal</string>
    <string name="userMealSectionHeaderTypeLabel">Meal\nType</string>
    <string name="userMealSectionHeaderMenuLabel">Menu</string>
    <string name="userMealSectionHeaderCalorieLabel">Calorie</string>

    <string name="userMealInputTotalCalorieLabel">Total Calorie</string>
    <string name="userMealInputTypeLabel">Meal Type</string>
    <string name="userMealInputMenuLabel">Menu</string>
    <string name="userMealInputCalorieLabel">Calorie</string>
    <string name="userMealInputKiloCalorieUnit">kcal</string>
</resources>
